# imotionlogger

./: .project  CMakeLists.txt
includes/: CMakeLists.txt
includes/lcm/: lcmhandler.h  lcmthread.h
includes/motion/: BonnMotionFile.cpp  BonnMotionFile.h  BonnMotionMobility.cpp  BonnMotionMobility.h
lcmtypes/cpp/lcmtypes/: lcmmsgs.hpp
src/: CMakeLists.txt  imotionlogger.cpp  rpgm_1.movements  rpgm_1_5UN.movements
